# advent_of_code

./: pyproject.toml
advent2023/cpp/: solution_fast  solution_fast.cpp
advent2023/cpp/solution_fast.dSYM/Contents/: Info.plist
advent2023/cpp/solution_fast.dSYM/Contents/Resources/DWARF/: solution_fast
advent2023/cpp/solution_fast.dSYM/Contents/Resources/Relocations/aarch64/: solution_fast.yml
advent2023/python/day1/: task1.py  task2.py
advent2023/python/day2/: task1.py  task2.py
advent2023/python/day3/: task1.py  task2.py
advent2024/: TEMP.py  animation_testing.py  day1.py  day10.py  day11.py  day12.py  day12_1.txt  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
